foi alterado a foto e a cor azul

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="widget1">
                 <div class="info-user">
                     <div class="img-user">
-                        <img src="image/eu.JPEG" alt="Imagem do usuário">
+                        <img src="image/WhatsApp Image 2025-01-23 at 14.10.25.jpeg" alt="Imagem do usuário">
                     </div>
                     <div class="name-user">
                         <h1>DALI FONSECA</h1>
